# api-docs/swagger.json
@@ -22,6 +22,9 @@
         },
         {
             "name": "Country"
+        },
+        {
+            "name": "Like"
         }
     ],
     "servers": [
@@ -128,7 +131,7 @@
                                     "type": "array",
                                     "items":{
                                         "type": "object",
-                                        "required": ["id","adCategory","area","price","description","owner","city","country"],
+                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes"],
                                         "properties": {
                                             "id":{
                                                 "type": "integer",
@@ -155,6 +158,9 @@
                                             },
                                             "country":{
                                                 "type": "string"
+                                            },
+                                            "numberOfLikes":{
+                                                "type": "integer"
                                             },
                                             "owner":{
                                                 "type": "object",
@@ -290,7 +296,7 @@
                                     "type": "array",
                                     "items":{
                                         "type": "object",
-                                        "required": ["id","adCategory","area","price","description"],
+                                        "required": ["id","adCategory","area","price","description","numberOfLikes","liked"],
                                         "properties": {
                                             "id":{
                                                 "type": "integer",
@@ -311,6 +317,12 @@
                                             "description":{
                                                 "type": "string",
                                                 "example":"desctiption"
+                                            },
+                                            "numberOfLikes":{
+                                                "type": "integer"
+                                            },
+                                            "liked":{
+                                                "type": "integer"
                                             },
                                             "city":{
                                                 "type": "string"
@@ -358,7 +370,7 @@
                                     "type": "array",
                                     "items":{
                                         "type": "object",
-                                        "required": ["id","adCategory","area","price","description","owner","city","country"],
+                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes","liked"],
                                         "properties": {
                                             "id":{
                                                 "type": "integer",
@@ -385,6 +397,12 @@
                                             },
                                             "country":{
                                                 "type": "string"
+                                            },
+                                            "numberOfLikes":{
+                                                "type": "integer"
+                                            },
+                                            "liked":{
+                                                "type": "integer"
                                             },
                                             "owner":{
                                                 "type": "object",
@@ -451,7 +469,7 @@
                                     "type": "array",
                                     "items":{
                                         "type": "object",
-                                        "required": ["id","adCategory","area","price","description","owner","city","country"],
+                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes"],
                                         "properties": {
                                             "id":{
                                                 "type": "integer",
@@ -478,6 +496,9 @@
                                             },
                                             "country":{
                                                 "type": "string"
+                                            },
+                                            "numberOfLikes":{
+                                                "type": "integer"
                                             },
                                             "owner":{
                                                 "type": "object",
@@ -1030,22 +1051,6 @@
                                 }
                             }
                         }
-                    },
-                    "409":{
-                        "description": "You cannot do that",
-                        "content":{
-                            "application/json":{
-                                "schema":{
-                                    "type": "object",
-                                        "required":["message"],
-                                        "properties": {
-                                            "message":{
-                                                "type": "string"
-                                            }
-                                        }
-                                }
-                            }
-                        }
                     }
                 },
                 "security": [{"bearerAuth":[]}]
@@ -1132,7 +1137,8 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [{"bearerAuth":[]}]
             }
         },
         "/api/sightseeing/reject/{sightseeingId}":{
@@ -1216,7 +1222,8 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [{"bearerAuth":[]}]
             }
         },
         "/api/sightseeing/mark_and_comment/{sightseeingId}":{
@@ -1319,7 +1326,8 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [{"bearerAuth":[]}]
             }
         },
         "/api/sightseeing/{sightseeingId}":{
@@ -1403,7 +1411,8 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [{"bearerAuth":[]}]
             }
         },
         "/api/country":{
@@ -1449,6 +1458,79 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/like":{
+            "post":{
+                "tags":["Like"],
+                "summary": "Like or unlike",
+                "requestBody":{
+                    "required": true,
+                    "content": {
+                        "application/json":{
+                            "schema":{
+                                "type":"object",
+                                "required": ["adId"],
+                                "properties": {
+                                    "adId":{
+                                        "type": "integer"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200":{
+                        "description":"Successful response",
+                        "content": {
+                            "application/json":{
+                                "schema":{
+                                    "type": "object",
+                                    "required": ["message"],
+                                    "properties": {
+                                        "message":{
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400":{
+                        "description":"Bad request",
+                        "content": {
+                            "application/json":{
+                                "schema":{
+                                    "type": "object",
+                                    "required": ["adId"],
+                                    "properties": {
+                                        "adId":{
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401":{
+                        "description": "Unauthorized. Token missing.",
+                        "content":{
+                            "application/json":{
+                                "schema":{
+                                    "type": "object",
+                                        "required":["message"],
+                                        "properties": {
+                                            "message":{
+                                                "type": "string"
+                                            }
+                                        }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{"bearerAuth":[]}]
             }
         }
     },
